frontend/src/Components/Popup/Popup.css
.popup_overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    background: rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    opacity: 0;
    visibility: hidden;
    top: -100%;
    transition: all .5s;
}

.popup_overlay.open {
    opacity: 1;
    visibility: visible;
    top: 0;
}

.popup_content {
    max-width: 700px;
    min-width: 700px;
    max-height: 600px;
    border-radius: 10px;
    margin: auto;
    position: relative;
    background: var(--bg_white);
}

.popup_content img {
    width: 100%;
    height: 100%;
}

.close_btn {
    position: absolute;
    z-index: 1;
    right: -10px;
    top: -10px;
    background: var(--bg_white);
    height: 20px;
    width: 20px;
    border-radius: 50%;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    opacity: 0.5;
    transition: all .5s;
}

.close_btn::before,
.close_btn::after {
    content: '';
    position: absolute;
    width: 2px;
    height: 10px;
    background: var(--yellow);
    transform: rotate(45deg);
    transition: all .5s;
}

.close_btn:hover {
    transform: rotate(180deg);
    opacity: 1;
}

.close_btn:hover::before,
.close_btn:hover::after {
    background-color: var(--red);
}

.close_btn::after {
    transform: rotate(150deg);
}

.popup_content_body {
    display: flex;
    flex-wrap: wrap;
}

.popup_content_body .col_50 {
    position: relative;
    width: calc(50% - 60px);
    margin: 30px 30px;
    overflow: hidden;
}

.popup_content_body .img_wrap {
    position: relative;
    overflow: hidden;
}

.view_btn_wrap {
    position: absolute;
    z-index: 9;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background: rgba(255, 255, 255, 0.5);
    border-radius: 10px;
    left: 0%;
    top: 100%;
    transition: all .5s;
    cursor: default;
}

.img_wrap:hover .view_btn_wrap {
    transform: translate(0%, -100%);
}

